Feature authservice (#24)
* Replace toList()

* Remove strRoles

* Remove variable pass