@@ -59,7 +59,7 @@ public class AuthService {
 
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(item -> item.getAuthority())
-                .collect(Collectors.toList());
+                .toList();
 
 
         Map<String, Object> claims = new HashMap<>();
@@ -73,13 +73,11 @@ public class AuthService {
 
     public AuthResponse register(@NotNull RegisterRequest request) {
 
-        Set<String> strRoles = request.getRoles();
         Set<RoleEntity> roles = request.getRoles().stream()
                 .map(role -> RoleEntity.builder()
                         .nameRole(ERole.valueOf(role))
                         .build())
                 .collect(Collectors.toSet());
-        String pass = passwordEncoder.encode(request.getPassword());
 
         PersonEntity user = PersonEntity.builder()
                 .name(request.getName())
